--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.csproj
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.csproj
@@ -14,6 +14,7 @@
     <None Remove="Assets\Icons\stop.svg" />
     <None Remove="Assets\Icons\sync-solid.svg" />
     <None Remove="Assets\Icons\sync.svg" />
+    <None Remove="Assets\Icons\times.svg" />
     <None Remove="Styles\AppStyles.xaml" />
   </ItemGroup>
   <ItemGroup>
@@ -25,6 +26,7 @@
     <AvaloniaResource Include="Assets\Icons\stop.svg" />
     <AvaloniaResource Include="Assets\Icons\disabled_sync.svg" />
     <AvaloniaResource Include="Assets\Icons\sync.svg" />
+    <AvaloniaResource Include="Assets\Icons\times.svg" />
   </ItemGroup>
   <ItemGroup>
     <AvaloniaXaml Include="Styles\AppStyles.xaml">
