--- a/source/Modern.Vice.PdbMonitor/Test/Modern.Vice.PdbMonitor.Core.Test/Modern.Vice.PdbMonitor.Core.Test.csproj
+++ b/source/Modern.Vice.PdbMonitor/Test/Modern.Vice.PdbMonitor.Core.Test/Modern.Vice.PdbMonitor.Core.Test.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.17.0" />
@@ -11,11 +12,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Modern.Vice.PdbMonitor.Engine\Modern.Vice.PdbMonitor.Engine.csproj" />
+    <ProjectReference Include="..\..\Modern.Vice.PdbMonitor.Core\Modern.Vice.PdbMonitor.Core.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <None Update="Samples\SamplePdbFile.pdb">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+
 </Project>
