--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.csproj
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.csproj
@@ -44,6 +44,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.5" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.5" />
     <PackageReference Include="Avalonia.Svg.Skia" Version="0.10.5.1" />
+    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
