--- a/source/Modern.Vice.PdbMonitor/Test/Modern.Vice.PdbMonitor.Core.Test/Modern.Vice.PdbMonitor.Core.Test.csproj
+++ b/source/Modern.Vice.PdbMonitor/Test/Modern.Vice.PdbMonitor.Core.Test/Modern.Vice.PdbMonitor.Core.Test.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.17.0" />
+    <PackageReference Include="AutoFixture.Community.ImmutableCollections" Version="1.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="NUnit" Version="3.13.2" />
