Works on Breakpoint properties, adds modal dialog mechanism

--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.Engine/Modern.Vice.PdbMonitor.Engine.csproj
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.Engine/Modern.Vice.PdbMonitor.Engine.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Modern.Vice.PdbMonitor.Core\Modern.Vice.PdbMonitor.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
+
 </Project>
