--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.Engine/Modern.Vice.PdbMonitor.Engine.csproj
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.Engine/Modern.Vice.PdbMonitor.Engine.csproj
@@ -11,6 +11,7 @@
     </AssemblyAttribute>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Antlr4.Runtime.Standard" Version="4.9.2" />
     <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
@@ -20,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Compilers\Modern.Vice.PdbMonitor.Compilers.Acme\Modern.Vice.PdbMonitor.Compilers.Acme.csproj" />
     <ProjectReference Include="..\Modern.Vice.PdbMonitor.Core\Modern.Vice.PdbMonitor.Core.csproj" />
   </ItemGroup>
 
