--- a/source/Modern.Vice.PdbMonitor/Compilers/Modern.Vice.PdbMonitor.Compilers.Acme/Modern.Vice.PdbMonitor.Compilers.Acme.csproj
+++ b/source/Modern.Vice.PdbMonitor/Compilers/Modern.Vice.PdbMonitor.Compilers.Acme/Modern.Vice.PdbMonitor.Compilers.Acme.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Modern.Vice.PdbMonitor.Core\Modern.Vice.PdbMonitor.Core.csproj" />
+  </ItemGroup>
+
 </Project>
