--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/nlog.config
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/nlog.config
@@ -22,6 +22,7 @@
 
   <rules>
     <!--<logger name="*" minlevel="Info" writeTo="logfile" />-->
+    <logger name="Righthand.ViceMonitor.Bridge.*" maxlevel="Info" final="true" />
     <logger name="*" minlevel="Trace" writeTo="debugger" />
     <logger name="*" minlevel="Trace" writeTo="console" />
   </rules>
