--- a/source/Modern.Vice.PdbMonitor/Test/Compilers/Compiler.Oscar64.Test/Compiler.Oscar64.Test.csproj
+++ b/source/Modern.Vice.PdbMonitor/Test/Compilers/Compiler.Oscar64.Test/Compiler.Oscar64.Test.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Compilers\Modern.Vice.PdbMonitor.Compilers.Acme\Modern.Vice.PdbMonitor.Compilers.Acme.csproj" />
+    <ProjectReference Include="..\..\Modern.Vice.PdbMonitor.Engine.Test\Modern.Vice.PdbMonitor.Engine.Test.csproj" />
     <ProjectReference Include="..\..\Modern.Vice.PdbMonitor.Utils.Test\Modern.Vice.PdbMonitor.Engine.Test.csproj" />
   </ItemGroup>
   <ItemGroup>
