Implements new trace, better breakpoints handling, continue execution

--- a/source/Modern.Vice.PdbMonitor/Test/Compilers/Compiler.Oscar64.Test/Compiler.Oscar64.Test.csproj
+++ b/source/Modern.Vice.PdbMonitor/Test/Compilers/Compiler.Oscar64.Test/Compiler.Oscar64.Test.csproj
@@ -18,6 +18,9 @@
     <ProjectReference Include="..\..\Modern.Vice.PdbMonitor.Utils.Test\Modern.Vice.PdbMonitor.Engine.Test.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="Samples\nested_variable.dbj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Samples\sprcoltut4.dbj">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
