--- a/source/Modern.Vice.PdbMonitor/Compilers/Compiler.Oscar64/Compiler.Oscar64.csproj
+++ b/source/Modern.Vice.PdbMonitor/Compilers/Compiler.Oscar64/Compiler.Oscar64.csproj
@@ -12,6 +12,7 @@
     </AssemblyAttribute>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="JsonSubTypes" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
