--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.csproj
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.csproj
@@ -55,19 +55,19 @@
     </AssemblyAttribute>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.0-preview6" />
-    <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.0.0-preview6" />
-    <PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.0.0-preview6" />
-    <PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.0.0-preview6.1" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview6" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0-preview6" />
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-preview6" />
-    <PackageReference Include="Avalonia.Svg.Skia" Version="11.0.0-preview6" />
-    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.0-preview6" />
-    <PackageReference Include="AvaloniaEdit.TextMate" Version="11.0.0-preview6" />
-    <PackageReference Include="Dock.Avalonia" Version="11.0.0-preview6" />
-    <PackageReference Include="Dock.Model" Version="11.0.0-preview6" />
-    <PackageReference Include="Dock.Model.Avalonia" Version="11.0.0-preview6" />
+    <PackageReference Include="Avalonia" Version="11.0.0-preview8" />
+    <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.0.0-preview8" />
+    <PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.0.0-preview8" />
+    <PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.0.0-preview8" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview8" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0-preview8" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-preview8" />
+    <PackageReference Include="Avalonia.Svg.Skia" Version="11.0.0-preview8.2" />
+    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.0-preview8" />
+    <PackageReference Include="AvaloniaEdit.TextMate" Version="11.0.0-preview8" />
+    <PackageReference Include="Dock.Avalonia" Version="11.0.0-preview8.2" />
+    <PackageReference Include="Dock.Model" Version="11.0.0-preview8.2" />
+    <PackageReference Include="Dock.Model.Avalonia" Version="11.0.0-preview8.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
@@ -85,6 +85,9 @@
     </Compile>
     <Compile Update="Views\CustomSourceFileViewer.axaml.cs">
       <DependentUpon>CustomSourceFileViewer.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Controls\ValueEditors\NumericVariableEditor.axaml.cs">
+      <DependentUpon>NumericVariableEditor.axaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
