Adds function splitting between files

--- a/source/Modern.Vice.PdbMonitor/Test/Compilers/Compiler.Oscar64.Test/Compiler.Oscar64.Test.csproj
+++ b/source/Modern.Vice.PdbMonitor/Test/Compilers/Compiler.Oscar64.Test/Compiler.Oscar64.Test.csproj
@@ -24,5 +24,14 @@
     <None Update="Samples\sprcoltut4.dbj">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Samples\TestFunctionsSplitBetweenFiles\character.cpp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Samples\TestFunctionsSplitBetweenFiles\character.h">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Samples\TestFunctionsSplitBetweenFiles\main.dbj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
