--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.Engine/Modern.Vice.PdbMonitor.Engine.csproj
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.Engine/Modern.Vice.PdbMonitor.Engine.csproj
@@ -5,6 +5,16 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Models\Debugging\**" />
+    <EmbeddedResource Remove="Models\Debugging\**" />
+    <None Remove="Models\Debugging\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="BindingValidators\PdbVariableBindValidator1.cs" />
+  </ItemGroup>
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
       <_Parameter1>$(AssemblyName).Test</_Parameter1>
@@ -15,20 +25,16 @@
     <PackageReference Include="Antlr4.Runtime.Standard" Version="4.13.1" />
     <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" PrivateAssets="All" />
-    <PackageReference Include="Righthand.MessageBus" Version="2.0.0-beta.4" />
+    <PackageReference Include="Righthand.MessageBus" Version="2.0.0-beta.6" />
     <PackageReference Include="Righthand.Vice.Bridge" Version="1.0.0-beta.18" />
+    <PackageReference Include="System.Text.Json" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Compilers\Compiler.Oscar64\Compiler.Oscar64.csproj" />
     <ProjectReference Include="..\Compilers\Modern.Vice.PdbMonitor.Compilers.Acme\Modern.Vice.PdbMonitor.Compilers.Acme.csproj" />
     <ProjectReference Include="..\Modern.Vice.PdbMonitor.Core\Modern.Vice.PdbMonitor.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\Debugging\" />
   </ItemGroup>
 
   <ItemGroup>
