--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.csproj
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.csproj
@@ -16,10 +16,14 @@
     <None Remove="Assets\Icons\follow.svg" />
     <None Remove="Assets\Icons\link.svg" />
     <None Remove="Assets\Icons\pause.svg" />
+    <None Remove="Assets\Icons\pause_disabled.svg" />
     <None Remove="Assets\Icons\play.svg" />
+    <None Remove="Assets\Icons\play_disabled.svg" />
     <None Remove="Assets\Icons\stop.svg" />
+    <None Remove="Assets\Icons\stop_disabled.svg" />
     <None Remove="Assets\Icons\sync-solid.svg" />
     <None Remove="Assets\Icons\sync.svg" />
+    <None Remove="Assets\Icons\sync_disabled.svg" />
     <None Remove="Assets\Icons\times.svg" />
     <None Remove="Assets\Icons\trash.svg" />
     <None Remove="Assets\Icons\xmark.svg" />
@@ -35,10 +39,14 @@
     <AvaloniaResource Include="Assets\Icons\disabled_link.svg" />
     <AvaloniaResource Include="Assets\Icons\follow.svg" />
     <AvaloniaResource Include="Assets\Icons\link.svg" />
+    <AvaloniaResource Include="Assets\Icons\pause_disabled.svg" />
     <AvaloniaResource Include="Assets\Icons\pause.svg" />
     <AvaloniaResource Include="Assets\Icons\play.svg" />
+    <AvaloniaResource Include="Assets\Icons\play_disabled.svg" />
+    <AvaloniaResource Include="Assets\Icons\stop_disabled.svg" />
     <AvaloniaResource Include="Assets\Icons\stop.svg" />
     <AvaloniaResource Include="Assets\Icons\disabled_sync.svg" />
+    <AvaloniaResource Include="Assets\Icons\sync_disabled.svg" />
     <AvaloniaResource Include="Assets\Icons\sync.svg" />
     <AvaloniaResource Include="Assets\Icons\times.svg" />
     <AvaloniaResource Include="Assets\Icons\trash.svg" />
@@ -59,12 +67,12 @@
     <PackageReference Include="Avalonia" Version="11.0.6" />
     <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.0.5" />
     <PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.0.6" />
-    <PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.0.1" />
+    <PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.0.2" />
     <PackageReference Include="Avalonia.Desktop" Version="11.0.6" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.6" />
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.6" />
-    <PackageReference Include="Avalonia.Svg.Skia" Version="11.0.0.7" />
-    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.5" />
+    <PackageReference Include="Avalonia.Svg.Skia" Version="11.0.0.9" />
+    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.6" />
     <PackageReference Include="AvaloniaEdit.TextMate" Version="11.0.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
