--- a/source/Modern.Vice.PdbMonitor/Test/Modern.Vice.PdbMonitor.Utils.Test/Modern.Vice.PdbMonitor.Engine.Test.csproj
+++ b/source/Modern.Vice.PdbMonitor/Test/Modern.Vice.PdbMonitor.Utils.Test/Modern.Vice.PdbMonitor.Engine.Test.csproj
@@ -8,6 +8,10 @@
     <PackageReference Include="AutoFixture.Community.ImmutableCollections" Version="1.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="NSubstitute" Version="5.1.0" />
+    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="NUnit" Version="4.0.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
