Adds disassembler, steping through assembly

--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.csproj
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor.csproj
@@ -87,8 +87,8 @@
     <ProjectReference Include="..\Modern.Vice.PdbMonitor.Engine\Modern.Vice.PdbMonitor.Engine.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="Views\ExecutionAddressInfo.axaml.cs">
-      <DependentUpon>ExecutionAddressInfo.axaml</DependentUpon>
+    <Compile Update="Views\StatusInfo.axaml.cs">
+      <DependentUpon>StatusInfo.axaml</DependentUpon>
     </Compile>
     <Compile Update="Views\SourceFilesViewer.axaml.cs">
       <DependentUpon>SourceFilesViewer.axaml</DependentUpon>
